# cryptobox-c

./: .gitignore  .travis.yml  CHANGELOG.txt  Cargo.toml  Makefile  README.md
deb/DEBIAN/: control
go/: cbox  main.go
src/: cbox.h  lib.rs  log.rs
test/: bench.c  main.c
