[package]
name         = "cryptobox-c"
version      = "0.8.2"
authors      = ["Wire Swiss GmbH <support@wire.com>"]
description  = "C-FFI to cryptobox"
homepage     = "https://github.com/wireapp/cryptobox-c"
repository   = "git@github.com:wireapp/cryptobox-c.git"
license      = "GPL-3.0"

[lib]
name         = "cryptobox"
crate-type   = ["dylib"]

[dependencies]
libc = ">= 0.1.12"

[dependencies.proteus]
git = "https://github.com/wireapp/proteus"

[dependencies.cryptobox]
git = "https://github.com/wireapp/cryptobox"
